Change correct interpreter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "C:\\Users\\ToNB\\Anaconda3\\python.exe",
+    "python.pythonPath": "C:\\Users\\ToNB\\AppData\\Local\\Microsoft\\WindowsApps\\python3.9.exe",
     "files.autoSave": "afterDelay",
     "editor.fontSize": 16,
     "terminal.integrated.fontSize": 16
